# Copyright 2025 Vijaykumar Singh <singhvjd@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "victor-security"
version = "0.2.0"
description = "Security auditing vertical for Victor ecosystem"
readme = "README.md"
authors = [{ name = "Victor Community", email = "community@victor.dev" }]
license = { text = "Apache-2.0" }
keywords = ["victor", "ai", "security", "vulnerability", "audit"]
requires-python = ">=3.10"

# Dependencies - external authoring depends on victor-sdk only
dependencies = [
    "victor-sdk>=0.6.0",
]

[project.optional-dependencies]
runtime = [
    "victor-ai>=0.3.0",
]

[project.entry-points."victor.plugins"]
security = "victor_security:plugin"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["victor-vertical.toml"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
