[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "victor-dataanalysis"
version = "0.7.0"
description = "Data Analysis vertical for Victor AI - Data processing, analysis, and visualization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
maintainers = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
keywords = [
    "victor",
    "vertical",
    "data-analysis",
    "pandas",
    "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "victor-contracts[yaml]>=0.6.0,<1.0",
    "pandas>=2.0",
    "numpy>=1.24,<2.3",
]

[project.optional-dependencies]
runtime = [
    # victor-ai runtime support - optional, contract-first architecture
    # "victor-ai>=0.6.0,<1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black==26.1.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/vjsingh1984/victor-dataanalysis"
Repository = "https://github.com/vjsingh1984/victor-dataanalysis"
Documentation = "https://docs.victor.dev/verticals/dataanalysis"
Issues = "https://github.com/vjsingh1984/victor-dataanalysis/issues"

[project.entry-points."victor.plugins"]
dataanalysis = "victor_dataanalysis.plugin:plugin"

[project.entry-points."victor.tool_dependencies"]
dataanalysis = "victor_dataanalysis.tool_dependencies:get_provider"

[project.entry-points."victor.safety_rules"]
dataanalysis = "victor_dataanalysis.safety:create_all_dataanalysis_safety_rules"

[project.entry-points."victor.framework.teams.providers"]
dataanalysis = "victor_dataanalysis.teams:DataAnalysisTeamSpecProvider"

# Victor extension protocol implementations
[project.entry-points."victor.extension.protocols"]
dataanalysis-tools = "victor_dataanalysis.protocols:DataAnalysisToolProvider"
dataanalysis-safety = "victor_dataanalysis.protocols:DataAnalysisSafetyProvider"
dataanalysis-prompts = "victor_dataanalysis.protocols:DataAnalysisPromptProvider"
dataanalysis-workflows = "victor_dataanalysis.protocols:DataAnalysisWorkflowProvider"

[tool.setuptools]
packages = [
    "victor_dataanalysis",
    "victor_dataanalysis.rl",
    "victor_dataanalysis.teams",
    "victor_dataanalysis.workflows",
]

[tool.black]
line-length = 100
target-version = [
    "py311",
    "py312",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file (sometimes necessary)
    "F401",  # unused imports (often intentional re-exports)
    "F811",  # redefined while unused (type imports shadowing runtime)
    "B007",  # loop control variable not used within loop body
    "B008",  # do not perform function calls in argument defaults
    "B019",  # lru_cache on methods (valid pattern for class methods)
    "B023",  # function uses loop variable (common pattern)
    "B024",  # abstract class with no abstract methods (valid for protocols)
    "B025",  # try-except with empty except clause (handled elsewhere)
    "B904",  # allow broad raising for now
    "B905",  # zip() without strict= parameter (not critical)
    "C401",  # unnecessary generator (minor optimization)
    "C414",  # unnecessary list/set call (minor optimization)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B017", "B018", "E741", "F841"]
[tool.mypy]
python_version = "3.11"
warn_return_any = true
