[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "victor-rag"
version = "0.7.1"
description = "RAG vertical for Victor AI - Document ingestion, vector search, and knowledge management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
maintainers = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
keywords = [
    "victor",
    "vertical",
    "rag",
    "retrieval-augmented-generation",
    "vector-search",
    "knowledge-base",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
]
dependencies = [
    "victor-contracts>=0.6.0,<1.0",
    "sentence-transformers>=2.2.0",
    "lancedb>=0.6.0",
    "pyarrow>=14.0",
    "fsspec>=2023.1.0,<=2026.2.0",  # Keep datasets/huggingface stack compatible
]

[project.optional-dependencies]
runtime = [
    # victor-ai runtime support - optional, contract-first architecture
    # "victor-ai>=0.6.0,<1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black==26.1.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/vjsingh1984/victor-rag"
Repository = "https://github.com/vjsingh1984/victor-rag"
Documentation = "https://docs.victor.dev/verticals/rag"
Issues = "https://github.com/vjsingh1984/victor-rag/issues"

[project.entry-points."victor.plugins"]
rag = "victor_rag.plugin:plugin"

[project.entry-points."victor.framework.teams.providers"]
rag = "victor_rag.teams:RAGTeamSpecProvider"

# Victor extension protocol implementations
[project.entry-points."victor.extension.protocols"]
rag-tools = "victor_rag.protocols:RAGToolProvider"
rag-safety = "victor_rag.protocols:RAGSafetyProvider"
rag-prompts = "victor_rag.protocols:RAGPromptProvider"
rag-workflows = "victor_rag.protocols:RAGWorkflowProvider"

# Unified command-tool delegation: the framework-owned `rag` dispatcher resolves
# these BaseTool classes by logical key (see victor.tool_callables in victor-ai).
[project.entry-points."victor.tool_callables"]
rag_ingest = "victor_rag.tools.ingest:RAGIngestTool"
rag_search = "victor_rag.tools.search:RAGSearchTool"
rag_query = "victor_rag.tools.query:RAGQueryTool"
rag_list = "victor_rag.tools.management:RAGListTool"
rag_delete = "victor_rag.tools.management:RAGDeleteTool"
rag_stats = "victor_rag.tools.management:RAGStatsTool"

[tool.setuptools]
packages = [
    "victor_rag",
    "victor_rag.tools",
    "victor_rag.ui",
    "victor_rag.workflows",
    "victor_rag.teams",
    "victor_rag.rl",
]

[tool.black]
line-length = 100
target-version = [
    "py311",
    "py312",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file (sometimes necessary)
    "F401",  # unused imports (often intentional re-exports)
    "F811",  # redefined while unused (type imports shadowing runtime)
    "B007",  # loop control variable not used within loop body
    "B008",  # do not perform function calls in argument defaults
    "B019",  # lru_cache on methods (valid pattern for class methods)
    "B023",  # function uses loop variable (common pattern)
    "B024",  # abstract class with no abstract methods (valid for protocols)
    "B025",  # try-except with empty except clause (handled elsewhere)
    "B904",  # allow broad raising for now
    "B905",  # zip() without strict= parameter (not critical)
    "C401",  # unnecessary generator (minor optimization)
    "C414",  # unnecessary list/set call (minor optimization)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B017", "B018", "E741", "F841"]
[tool.mypy]
python_version = "3.11"
warn_return_any = true
