# Copyright 2025 Vijaykumar Singh <singhvjd@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "victor-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Victor edge runtime — standalone agent for resource-constrained devices"

[[bin]]
name = "victor-edge"
path = "src/main.rs"

[lib]
name = "victor_edge"
path = "src/lib.rs"

[dependencies]
victor-protocol = { path = "../protocol" }
victor-state = { path = "../state" }
victor-tools = { path = "../tools" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[features]
default = []
# Future: ONNX inference for embedded models
# onnx = ["dep:ort"]
