[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "victor-minimal-vertical"
version = "0.1.0"
description = "Example minimal vertical using victor_contracts (zero runtime dependencies)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]

# ONLY depends on the contracts package - zero runtime dependencies!
dependencies = [
    "victor-contracts>=0.7.0",
]

[project.optional-dependencies]
# Optional: install victor-ai to actually run the vertical
runtime = [
    "victor-ai>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/anvai-labs/victor"
Repository = "https://github.com/anvai-labs/victor"
Documentation = "https://docs.victor.dev/sdk"

[tool.setuptools]
packages = ["victor_minimal_vertical"]

# ============================================================================
# ENTRY POINT REGISTRATIONS
# ============================================================================

# Plugin registration (standard)
[project.entry-points."victor.plugins"]
minimal = "victor_minimal_vertical:plugin"

# Protocol implementations
[project.entry-points."victor.extension.protocols"]
minimal-tools = "victor_minimal_vertical.protocols:MinimalToolProvider"
minimal-safety = "victor_minimal_vertical.protocols:MinimalSafetyProvider"

# Capability providers
[project.entry-points."victor.extension.capabilities"]
minimal-search = "victor_minimal_vertical.capabilities:MinimalSearchCapability"
minimal-validation = "victor_minimal_vertical.capabilities:MinimalValidationCapability"

# Validators
[project.entry-points."victor.extension.validators"]
file-path = "victor_minimal_vertical.validators:validate_file_path"
code-content = "victor_minimal_vertical.validators:validate_code_content"
